[tool.poetry]
name = "problem_bank_scripts"
version = "0.2.12"
description = "A packagee with useful functions to convert between different problem bank formats."
authors = ["Open Problem Bank Team"]
license = "MIT"
readme = "README.md"
documentation = "https://problem_bank_scripts.readthedocs.io/en/latest/"
homepage = "https://github.com/open-resources/problem_bank_scripts"
repository = "https://github.com/open-resources/problem_bank_scripts"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.4"
PyYAML = "^5.4.1"
docopt = "^0.6.2"
numpy = "^1.20.3"
markdown-it-py = "^1.1.0"
mdformat = "^0.7.6"
sympy = "^1.8"
problem-bank-helpers = "^0.1.3"

[tool.poetry.dev-dependencies]
Sphinx = "^4.0.1"
nbsphinx = "^0.8.5"
ipykernel = "^5.5.5"
sphinx-autoapi = "^1.8.1"
sphinx-rtd-theme = "^0.5.2"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.2.4"
myst-nb = "^0.13.1"

# [build-system]
# requires = ["poetry-core>=1.0.0"]
# build-backend = "poetry.core.masonry.api"

[build-system]
requires = [
    "setuptools >= 48",
    "setuptools_scm[toml] >= 4, <6",
    "setuptools_scm_git_archive",
    "wheel >= 0.29.0",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
write_to = "src/problem_bank_scripts/VERSION.txt"
# this finds last tag of the form v0.2.8
# copied from https://github.com/dib-lab/screed/blob/latest/pyproject.toml
#git_describe_command = "git describe --dirty --tags --long --match v* --first-parent"
