[metadata]
name = problem_bank_scripts
author = "Open Problem Bank Team"
author_email = tbd@tbd.ca
description = "A packagee with useful functions to convert between different problem bank formats."
url = https://problem_bank_scripts.readthedocs.io/en/latest
project_urls =
    Bug Tracker = https://github.com/open-resources/problem_bank_scripts
keywords='eoas ubc ocese'
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license_files = LICENSE

[options]
zip_safe = False
packages = find:
platforms = any
include_package_data = True
install_requires =
    bz2file
python_requires = >=3.8
setup_requires =
    setuptools_scm
package_dir =
   = src

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
   script1 = problem_bank_scripts.eoas_plearn:main
   
[bdist_wheel]
universal = 1


